<resources>
    <string name="app_name">DuitDroid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="kategori_array">
        <item>Makanan</item>
        <item>Transportasi</item>
        <item>Belanja</item>
        <!-- Tambahkan kategori lain sesuai kebutuhan -->
    </string-array>
    
    <string name="app_logo">App Logo</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
</resources>